--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ requires-python = ">=3.9"
 dynamic = ["dependencies"]
 
 
-[build_system]
-requires = ["setuptools==69.5.1"]
+[build-system]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.dynamic]
