--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -3,7 +3,9 @@ name: Publish Python package to PyPi
 on:
   push:
     branches:
-      - main  # Uruchamiany na push do głównego brancha
+      - main
+    tags:
+      - 'v*.*.*'  # Uruchamiany na tagi wersji
   workflow_dispatch:  # Pozwala na ręczne wywołanie workflow
 
 jobs:
@@ -14,7 +16,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
-        persist-credentials: false  # Wyłączanie zapisywania poświadczeń
+        persist-credentials: false
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -49,6 +51,9 @@ jobs:
 
     - name: Build package
       run: python -m build
+
+    - name: Debug GitHub ref
+      run: echo "Current ref ${{ github.ref }}"
 
     - name: Publish to PyPI
       if: startsWith(github.ref, 'refs/tags/')
