--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
+    - name: Install build dependencies
       run: python -m pip install --upgrade build toml
 
     - name: Extract version from pyproject.toml
@@ -46,9 +46,6 @@ jobs:
         git tag -a "v${{ env.VERSION }}" -m "Release version ${{ env.VERSION }}"
         git push origin "v${{ env.VERSION }}"
 
-    - name: Install build dependencies
-      run: python -m pip install --upgrade build
-
     - name: Build package
       run: python -m build
 
@@ -60,4 +57,7 @@ jobs:
       env:
         TWINE_USERNAME: "__token__"
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-      run: python -m pip install --upgrade twine && python -m twine upload dist/*
+      run: |
+        echo "Publishing package to PyPI..."
+        python -m pip install --upgrade twine
+        python -m twine upload dist/* || exit 1
