--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -1,63 +1,46 @@
-name: Publish Python package to PyPi
+name: Publish to PyPI
 
 on:
   push:
     branches:
-      - main
-    tags:
-      - 'v*.*.*'  # Uruchamiany na tagi wersji
-  workflow_dispatch:  # Pozwala na ręczne wywołanie workflow
+      - main  # lub inna gałąź, na którą chcesz publikować
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        persist-credentials: false
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'  # lub inna wersja Pythona
 
-    - name: Install build dependencies
-      run: python -m pip install --upgrade build toml
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel twine toml
 
-    - name: Extract version from pyproject.toml
-      id: get_version
-      run: |
-        VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['project']['version'])")
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - name: Read version from pyproject.toml
+        id: get_version
+        run: |
+          VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['tool']['poetry']['version'])")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Configure Git for GitHub Actions
-      run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
+      - name: Build the package
+        run: python -m build
 
-    - name: Set up GitHub authentication
-      run: |
-        git remote set-url origin https://x-access-token:${{ secrets.MY_PAT }}@github.com/${{ github.repository }}.git
+      - name: Publish to PyPI
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: twine upload dist/*
 
-    - name: Create Git tag
-      run: |
-        git tag -a "v${{ env.VERSION }}" -m "Release version ${{ env.VERSION }}"
-        git push origin "v${{ env.VERSION }}"
-
-    - name: Build package
-      run: python -m build
-
-    - name: Debug GitHub ref
-      run: echo "Current ref ${{ github.ref }}"
-
-    - name: Publish to PyPI
-      if: startsWith(github.ref, 'refs/tags/')
-      env:
-        TWINE_USERNAME: "__token__"
-        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-      run: |
-        echo "Publishing package to PyPI..."
-        python -m pip install --upgrade twine
-        python -m twine upload dist/* || exit 1
+      - name: Create Git tag
+        run: |
+          git tag v${{ env.VERSION }}
+          git push origin v${{ env.VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Token do autoryzacji
