--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
     - examples/first_kepler_example.py
     - examples/maps_example.py
     - examples/phase_angel_example.py
+    - examples/downloading_kernels.py
 theme:
   name: material
 plugins:
