--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,8 @@ nav:
     - examples/maps_example.py
     - examples/phase_angel_example.py
     - examples/downloading_kernels.py
-    - examples/orbit.example.py
+    - examples/orbit_example.py
+    - examples/comets_example.py
 theme:
   name: material
 plugins:
